unpackaged/objects/Property_Checklist__c.object
<CustomObject>
    <fields>
        <fullName>Address_Of_The_Property__c</fullName>
        <label>Address Of The Property</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Amount_To_Be_Paid_For_The_Property__c</fullName>
        <inlineHelpText>For purchase cases only)</inlineHelpText>
        <label>Amount To Be Paid For The Property</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Property Checklists</relationshipLabel>
        <relationshipName>Property_Checklists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Built_Up_Super_Built_Up_Area__c</fullName>
        <label>Built Up/Super Built Up Area (In sq ft)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>City</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Occupation_Status__c</fullName>
        <label>Current Occupation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Comments__c</fullName>
        <label>Document Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Document_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Document Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Land_Area_In_Sq_Ft__c</fullName>
        <label>Land Area (In Sq Ft.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_Of_The_Owners_Of_The_Property__c</fullName>
        <label>Name Of The Owner/s Of The Property</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Details_In_Case_of_LAP__c</fullName>
        <label>Property Details (In Case of LAP)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Photos_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>*2 Internal and 1 external photograph  with selfie of Ambit Employee and Borrower .</inlineHelpText>
        <label>Property Photos Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dummy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tentative_Market_Value__c</fullName>
        <label>Tentative Market Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_Document__c</fullName>
        <label>Type of Document</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dummy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Property__c</fullName>
        <label>Type of Property</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dummy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Property Checklist</label>
    <nameField>
        <displayFormat>PC-{000000}</displayFormat>
        <label>Property Checklist #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>